# pocb

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: release.yml
docs/: liquid-glass-adaptive.md  liquid-glass-clear.md  liquid-glass-private-testing.md
icons/pcob.icon/: icon.json
src/: BrowserWindow.cpp  BrowserWindow.hpp  FloatingOmnibox.cpp  MacIntegration.hpp  MacIntegration.mm  ProfileStore.cpp  ProfileStore.hpp  WebKitProfile.hpp  WebKitProfile.mm  WebView.mm  main.cpp
src/app/: BrowserWindow.cpp  BrowserWindow.hpp  LittleWindow.cpp  LittleWindow.hpp  SettingsDialog.cpp  SettingsDialog.hpp
src/mac/: DefaultBrowser.hpp  DefaultBrowser.mm  GlobalHotkeys.hpp  GlobalHotkeys.mm  HighRefresh.mm  LayerCorners.mm  MacIntegration.hpp  MacInternal.hpp  MacInternal.mm  NativeProfilePopover.hpp  NativeProfilePopover.mm  NativeSettingsWindow.hpp  NativeSettingsWindow.mm  SfSymbols.mm  TrafficLights.mm  UnifiedToolbar.mm  Vibrancy.mm
src/services/: BookmarkStore.cpp  BookmarkStore.hpp  ChromeExtensionManager.cpp  ChromeExtensionManager.hpp  FaviconService.cpp  FaviconService.hpp  ProfileStore.cpp  ProfileStore.hpp  Theme.cpp  Theme.hpp
src/tabs/: MiniWindowDragPreview.cpp  MiniWindowDragPreview.hpp  TabTree.cpp  TabTree.hpp
src/ui/: AddressBarController.cpp  AddressBarController.hpp  ChromeWidgets.cpp  ChromeWidgets.hpp  FloatingOmnibox.cpp  FloatingOmnibox.hpp  LayoutMetrics.hpp  SidebarController.cpp  SidebarController.hpp  Topbar.cpp  Topbar.hpp
src/web/: WebView.hpp  WebView.mm
